# rf-detr-scatterplots

./: .gitignore  NOTES.md  README.md  annotate_datasets.py  constants.py  convert_coco.py  generate_datasets.py  launch_server.py  package.json  pyproject.toml  test_models.py  theme.js  train.py  trigger_train.py  utils.py  validate_images.py
src/pages/: _app.jsx
